--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,19 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.3</version>
+        <version>2.6.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.generator</groupId>
     <artifactId>invoice</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0</version>
     <name>Invoice Generator</name>
     <description>Invoice Generator</description>
 
     <properties>
         <java.version>1.8</java.version>
-        <kotlin.version>1.5.21</kotlin.version>
+        <kotlin.version>1.6.10</kotlin.version>
     </properties>
 
     <dependencies>
@@ -54,12 +54,12 @@
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli-spring-boot-starter</artifactId>
-            <version>4.6.1</version>
+            <version>4.6.2</version>
         </dependency>
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
-            <version>6.17.0</version>
+            <version>6.18.1</version>
         </dependency>
     </dependencies>
 
@@ -95,8 +95,8 @@
 
     <repositories>
         <repository>
-            <id>jaspersoft</id>
-            <url>http://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
+            <id>jaspersoft-repo</id>
+            <url>https://jaspersoft.jfrog.io/jaspersoft/jaspersoft-repo</url>
         </repository>
     </repositories>
 </project>
